--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@
 body {
   font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont,	"Segoe UI", sans-serif;
   background-color: #ffffff;
-  color: #0f172a;
+  color: #282828;
 }
 .btn {
   cursor: pointer;
@@ -323,12 +323,12 @@ body {
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
 .btn-secondary {
-  border-color: #0f172a;
-  background-color: #0f172a;
+  border-color: #282828;
+  background-color: #282828;
   color: var(--color-white);
 }
 .btn-secondary:hover {
-  background-color: #1e293b;
+  background-color: #3a3a3a;
   --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
