--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
-  padding: 0.75rem 1rem;
+  padding: 1rem 1rem;
   width: 100%;
   background-color: #ffffff;
   color: #282828;
@@ -416,6 +416,33 @@ body {
     max-width: none;
     text-align: center;
   }
+}
+.search-section {
+  background-color: #282828;
+  padding: 1rem;
+  width: 100%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.16);
+  display: flex;
+  justify-content: flex-start;
+}
+.search-inner {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  gap: 0.5rem;
+  justify-content: flex-start;
+}
+.search-input {
+  border-radius: var(--radius-md);
+  border-style: var(--tw-border-style);
+  border-width: 1px;
+  border-color: var(--color-gray-300);
+  background-color: var(--color-white);
+  padding-inline: calc(var(--spacing) * 3);
+  padding-block: calc(var(--spacing) * 2);
+  color: var(--color-gray-800);
+  width: 100%;
+  max-width: 300px;
 }
 @property --tw-scale-x {
   syntax: "*";
