--- a/css/input.css
+++ b/css/input.css
@@ -334,6 +334,7 @@ body {
 	border-radius: 0.75rem;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.16);
 	padding: 1.5rem 1.75rem;
+	margin-bottom: 2.5rem;
 }
 
 #listing-error {
