--- a/css/input.css
+++ b/css/input.css
@@ -11,6 +11,20 @@ body {
 	color: #282828; /* Charcoal color */
 }
 
+html,
+body {
+	height: 100%;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+	flex: 1;
+}
+
 /* ======================= */
 /*      BUTTON STYLING     */
 /* ======================= */
